--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "file-saver": "^2.0.5",
     "jodit-react": "^1.3.36",
     "jquery": "^3.7.0",
+    "js-cookie": "^3.0.5",
     "materialize-css": "^1.0.0",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.34",
