--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18.2.0",
     "react-export-table-to-excel": "^1.0.6",
     "react-geolocated": "^4.0.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
     "react-multi-select-component": "^4.2.9",
