--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.3.1",
     "bson-objectid": "^2.0.4",
+    "crypto-js": "^4.2.0",
     "css-loader": "^7.1.2",
     "datatables.net": "^1.13.6",
     "datatables.net-dt": "^1.13.6",
