--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment-timezone": "^0.5.34",
     "mongodb": "^6.1.0",
     "multiselect-react-dropdown": "^2.0.25",
+    "owl.carousel": "^2.3.4",
     "polished": "^4.2.2",
     "postcss-loader": "^8.1.1",
     "qs": "^6.13.0",
@@ -44,6 +45,7 @@
     "react-icons": "^4.6.0",
     "react-moment": "^1.1.2",
     "react-multi-select-component": "^4.2.9",
+    "react-owl-carousel": "^2.3.3",
     "react-paginate": "^8.1.4",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.26.1",
